// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaRegisterApi integration test 1`] = `
Object {
  "Outputs": Object {
    "CaRegisterApitestcaseEndpointEF186608": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "CaRegisterApitestcaseFF571B6E",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "CaRegisterApitestcaseDeploymentStageprodDE10CF92",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680ArtifactHash6009DD99": Object {
      "Description": "Artifact hash for asset \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3BucketFA446724": Object {
      "Description": "S3 bucket for asset \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA": Object {
      "Description": "S3 key for asset version \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414ArtifactHashC42464D6": Object {
      "Description": "Artifact hash for asset \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3Bucket9E7A5164": Object {
      "Description": "S3 bucket for asset \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F": Object {
      "Description": "S3 key for asset version \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CaRegisterApitestcaseAccount8E47E814": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseFF571B6E",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCloudWatchRoleCA9AE705",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "CaRegistrationRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iam:CreateRole",
                "iam:AttachRolePolicy",
                "iot:RegisterCACertificate",
                "iot:TagResource",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E",
        "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3Bucket9E7A5164",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "ACTIVATOR_ARN": Object {
              "Fn::GetAtt": Array [
                "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E",
                "Arn",
              ],
            },
            "ACTIVATOR_QUEUE_URL": Object {
              "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
            },
            "ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7",
                "Arn",
              ],
            },
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "test_verifier": Object {
              "Fn::ImportValue": "verifier-stack:ExportsOutputFnGetAtttestcase9BC7DE4DArn30A02383",
            },
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CaRegisterApitestcaseCloudWatchRoleCA9AE705": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeploymentA61510DD31c106b806b5ce17a0c9fb7449bdb5c6": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseregisterPOST14D94C4D",
        "CaRegisterApitestcaseregister4C4AC1E7",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "CaRegisterApitestcaseDeploymentStageprodDE10CF92": Object {
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "CaRegisterApitestcaseDeploymentA61510DD31c106b806b5ce17a0c9fb7449bdb5c6",
        },
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5",
        "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3BucketFA446724",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseSqsEventSourceteststackCaRegisterApitestcaseDeviceActivatortestcaseReceptortestcase84FE82A6BD502882": Object {
      "Properties": Object {
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "iot:UpdateCertificate",
                    "iot:DescribeCertificate",
                    "lambda:InvokeFunction",
                    "lambda:InvokeAsync",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CaRegistrationPolicy",
          },
        ],
        "RoleName": "ActivatorRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReceptorPushRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcaseDefaultPolicy85C6E077": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcaseDefaultPolicy85C6E077",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseFF571B6E": Object {
      "Properties": Object {
        "Name": "test-case",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "CaRegisterApitestcaseregister4C4AC1E7": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseFF571B6E",
            "RootResourceId",
          ],
        },
        "PathPart": "register",
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "CaRegisterApitestcaseregisterPOST14D94C4D": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "CaRegisterApitestcaseregister4C4AC1E7",
        },
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "CaRegisterApitestcaseregisterPOSTApiPermissionTestteststackCaRegisterApitestcaseFF910C4APOSTregister6A6A521F": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "CaRegisterApitestcaseFF571B6E",
              },
              "/test-invoke-stage/POST/register",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CaRegisterApitestcaseregisterPOSTApiPermissionteststackCaRegisterApitestcaseFF910C4APOSTregisterAF42F0FD": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "CaRegisterApitestcaseFF571B6E",
              },
              "/",
              Object {
                "Ref": "CaRegisterApitestcaseDeploymentStageprodDE10CF92",
              },
              "/POST/register",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`CaRegisterApi integration test without specifying a verifier 1`] = `
Object {
  "Outputs": Object {
    "CaRegisterApitestcaseEndpointEF186608": Object {
      "Value": Object {
        "Fn::Join": Array [
          "",
          Array [
            "https://",
            Object {
              "Ref": "CaRegisterApitestcaseFF571B6E",
            },
            ".execute-api.",
            Object {
              "Ref": "AWS::Region",
            },
            ".",
            Object {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            Object {
              "Ref": "CaRegisterApitestcaseDeploymentStageprodDE10CF92",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": Object {
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680ArtifactHash6009DD99": Object {
      "Description": "Artifact hash for asset \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3BucketFA446724": Object {
      "Description": "S3 bucket for asset \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA": Object {
      "Description": "S3 key for asset version \\"6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414ArtifactHashC42464D6": Object {
      "Description": "Artifact hash for asset \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3Bucket9E7A5164": Object {
      "Description": "S3 bucket for asset \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
    "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F": Object {
      "Description": "S3 key for asset version \\"f97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "CaRegisterApitestcaseAccount8E47E814": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseFF571B6E",
      ],
      "Properties": Object {
        "CloudWatchRoleArn": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCloudWatchRoleCA9AE705",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
    },
    "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "RoleName": "CaRegistrationRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iam:CreateRole",
                "iam:AttachRolePolicy",
                "iot:RegisterCACertificate",
                "iot:TagResource",
                "iot:GetRegistrationCode",
                "iot:CreateTopicRule",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseCaRegistrationRoletestcaseDefaultPolicy8F06888E",
        "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3Bucket9E7A5164",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersf97bc1726007dcfa6fa26d5c80f3be1a7d82c80d4c5b454db132670fa2d7b414S3VersionKey0057510F",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "ACTIVATOR_ARN": Object {
              "Fn::GetAtt": Array [
                "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E",
                "Arn",
              ],
            },
            "ACTIVATOR_QUEUE_URL": Object {
              "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
            },
            "ACTIVATOR_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7",
                "Arn",
              ],
            },
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "MemorySize": 256,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistrationRoletestcaseDDDC7E56",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
        "Timeout": 10,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CaRegisterApitestcaseCloudWatchRoleCA9AE705": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeploymentA61510DD31c106b806b5ce17a0c9fb7449bdb5c6": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseregisterPOST14D94C4D",
        "CaRegisterApitestcaseregister4C4AC1E7",
      ],
      "Properties": Object {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "CaRegisterApitestcaseDeploymentStageprodDE10CF92": Object {
      "Properties": Object {
        "DeploymentId": Object {
          "Ref": "CaRegisterApitestcaseDeploymentA61510DD31c106b806b5ce17a0c9fb7449bdb5c6",
        },
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E": Object {
      "DependsOn": Array [
        "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5",
        "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3BucketFA446724",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters6b3694902802454ac14a560cf8d6b585fb62de1be4bc10e74739185576cb2680S3VersionKeyFE70D7EA",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseSqsEventSourceteststackCaRegisterApitestcaseDeviceActivatortestcaseReceptortestcase84FE82A6BD502882": Object {
      "Properties": Object {
        "EventSourceArn": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
            "Arn",
          ],
        },
        "FunctionName": Object {
          "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorFunctiontestcaseC8645D0E",
        },
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "iot:UpdateCertificate",
                    "iot:DescribeCertificate",
                    "lambda:InvokeFunction",
                    "lambda:InvokeAsync",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CaRegistrationPolicy",
          },
        ],
        "RoleName": "ActivatorRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcaseDefaultPolicyF4D7BDD5",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseActivatorRoletestcase49DD9FE7",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "sqs:SendMessageBatch",
                    "sqs:SendMessage",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::GetAtt": Array [
                      "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                      "Arn",
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "SqsPushPolicy",
          },
        ],
        "RoleName": "ReceptorPushRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcaseDefaultPolicy85C6E077": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcaseC43B02DB",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcaseDefaultPolicy85C6E077",
        "Roles": Array [
          Object {
            "Ref": "CaRegisterApitestcaseDeviceActivatortestcaseReceptortestcasePushRoletestcase99B435B7",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "CaRegisterApitestcaseFF571B6E": Object {
      "Properties": Object {
        "Name": "test-case",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "CaRegisterApitestcaseregister4C4AC1E7": Object {
      "Properties": Object {
        "ParentId": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseFF571B6E",
            "RootResourceId",
          ],
        },
        "PathPart": "register",
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "CaRegisterApitestcaseregisterPOST14D94C4D": Object {
      "Properties": Object {
        "AuthorizationType": "NONE",
        "HttpMethod": "POST",
        "Integration": Object {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                Object {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                Object {
                  "Fn::GetAtt": Array [
                    "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": Object {
          "Ref": "CaRegisterApitestcaseregister4C4AC1E7",
        },
        "RestApiId": Object {
          "Ref": "CaRegisterApitestcaseFF571B6E",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "CaRegisterApitestcaseregisterPOSTApiPermissionTestteststackCaRegisterApitestcaseFF910C4APOSTregister6A6A521F": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "CaRegisterApitestcaseFF571B6E",
              },
              "/test-invoke-stage/POST/register",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "CaRegisterApitestcaseregisterPOSTApiPermissionteststackCaRegisterApitestcaseFF910C4APOSTregisterAF42F0FD": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "CaRegisterApitestcaseCaRegistratorFunctiontestcaseB58B98CE",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": Object {
          "Fn::Join": Array [
            "",
            Array [
              "arn:",
              Object {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              Object {
                "Ref": "AWS::Region",
              },
              ":",
              Object {
                "Ref": "AWS::AccountId",
              },
              ":",
              Object {
                "Ref": "CaRegisterApitestcaseFF571B6E",
              },
              "/",
              Object {
                "Ref": "CaRegisterApitestcaseDeploymentStageprodDE10CF92",
              },
              "/POST/register",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
